# mcsc

./: .eslintignore  .eslintrc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  pull_request_template.md  tailwind.config.cjs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Header.jsx  Install.jsx  MainMenu.jsx  Servers.jsx  Settings.jsx  Sidebar.jsx
src/components/questions/: ServerMemoryLimit.jsx  ServerPlayerLimit.jsx  ServerSetupDone.jsx  ServerType.jsx  ServerVersion.jsx
src/util/: constants.js  functions.js
