[package]
name = "mcsc"
version = "1.1.0"
description = "An easy to use Minecraft server creator."
authors = ["Bruno Lepis <https://brunolepis.xyz>"]
license = "MIT"
repository = "https://github.com/brunolepis/mcsc"
# default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all"] }
reqwest = { version="0.11.11", features = ["blocking", "json"] }
# fix ubuntu 22.04 compatibility issues (soon)
# openssl = { version = "0.10", features = ["vendored"] }
# openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
