[package]
name = "mcsc"
version = "1.1.1"
description = "An easy to use Minecraft server creator."
authors = ["Bruno Lepis <https://brunolepis.xyz>"]
license = "MIT"
repository = "https://github.com/brunolepis/mcsc"
# default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = [
  "dialog-all",
  "fs-copy-file",
  "fs-create-dir",
  "fs-read-dir",
  "fs-remove-dir",
  "fs-write-file",
  "http-all",
  "os-all",
  "path-all",
  "shell-all",
] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
# fix ubuntu 22.04 compatibility issues (soon)
# openssl = { version = "0.10", features = ["vendored"] }
# openssl-sys = { version = "0.9", features = ["vendored"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
