[package]
name = "mcsc"
version = "1.1.3"
description = "An easy to use Minecraft server creator."
authors = ["Bruno Lepis <https://brunolepis.xyz>"]
license = "MIT"
repository = "https://github.com/brunolepis/mcsc"
# default-run = "app"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["dialog-all", "fs-copy-file", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-remove-dir", "fs-write-file", "http-all", "os-all", "path-all", "shell-all"] }
reqwest = { version = "0.11.12", features = [
  "blocking",
  "json",
  "rustls-tls",
  "brotli",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
